add nodes rendering when invoked with 'ant debug' + move displaying elements into separate methods